# school_project10Grade

./: .gitignore  README.md
bad_physics_example/: Cargo.toml  (+1 more)
engine_3d/: Cargo.toml  build.rs
engine_3d/crates/animation/: Cargo.toml
engine_3d/crates/animation/src/animation/: morph.rs
engine_3d/crates/assets/: Cargo.toml  assets.data
engine_3d/crates/assets/src/: ext.rs  image_importer.rs  lib.rs  loader.rs  model_importer.rs  ranged_reader.rs  saver.rs
engine_3d/crates/assets/testmaterials/: frag.glsl  vert.glsl
engine_3d/crates/assets/testmaterials/Pushkin's poetry/: Curious.txt  Friendship.txt  Merry feast.txt
engine_3d/crates/gl/: build.rs
engine_3d/crates/gl/src/: lib.rs
engine_3d/crates/graphics/: Cargo.toml
engine_3d/crates/graphics/src/: color.rs  compare_opt.rs  depth.rs  face_culling.rs  lib.rs  resize_event.rs  stencil.rs
engine_3d/crates/graphics/src/draw_options/: color_mask.rs  depth.rs  face_culling.rs  mod.rs
engine_3d/crates/graphics/src/ecs/: light.rs  material.rs  mesh_renderer.rs  mod.rs
engine_3d/crates/graphics/src/ecs/camera/: main_camera.rs  main_camera_system.rs  mod.rs  on_resize.rs  postprocessing_container.rs  projection.rs  render_target.rs
engine_3d/crates/graphics/src/ecs/rendering/: color_correction.glsl  lit_shading.rs  mod.rs  opt_vert_avgperf.txt  postprocessing.rs  render_system.rs  screen_vert_avg_perf.txt
engine_3d/crates/graphics/src/objects/: mod.rs  viewport.rs
engine_3d/crates/graphics/src/objects/buffers/: framebuffer.rs  mod.rs
engine_3d/crates/graphics/src/objects/model/: mod.rs  primitives.rs
engine_3d/crates/graphics/src/objects/shader/: mod.rs
engine_3d/crates/graphics/src/objects/texture/: mod.rs  texture.rs  texture_handle.rs  texture_trait.rs  texture_type.rs
engine_3d/crates/graphics/src/objects/vertex/: mod.rs
engine_3d/crates/graphics/src/utils/: mod.rs
engine_3d/crates/lighting/: Cargo.toml
engine_3d/crates/lighting/src/: lib.rs
engine_3d/crates/post_processing/: Cargo.toml
engine_3d/crates/post_processing/src/: lib.rs
engine_3d/crates/post_processing/src/shaders/: color_correction.glsl  fog.glsl  tonemapping_reinhard_jodie.frag
engine_3d/crates/rendering/: Cargo.toml
engine_3d/crates/rendering/src/: composition.rs  lib.rs  lit_shading.rs  material.rs  mesh_renderer.rs  render_path.rs  render_system.rs
engine_3d/crates/rendering/src/camera/: camera.rs  camera_viewport.rs  main_camera.rs  mod.rs  on_resize.rs  projection.rs  render_target.rs
engine_3d/crates/rendering/src/light/: area_light.rs  directional_light.rs  light_properties.rs  light_storage.rs  mod.rs  shadow_atlas.rs  shadowmap.rs  spotlight.rs
engine_3d/crates/rendering/src/shaders/: copy.glsl  deferred_shading_ambient_frag.glsl  deferred_shading_point_frag.glsl  deferred_shading_sun_frag.glsl  depth_pass_vert.glsl  forward_vert.glsl  gbuffer_frag.glsl  gbuffer_vert.glsl
engine_3d/crates/time/src/: lib.rs
engine_3d/crates/transform/: Cargo.toml
engine_3d/crates/transform/src/: lib.rs
engine_3d/src/: lib.rs
engine_3d/src/game_engine/: event_handler.rs  input_handler.rs  mod.rs  window.rs
(+39 files in other folders)
