[package]
name = "engine_3d"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
panic = "abort"
strip = true
opt-level = 2
lto = "fat"
codegen-units = 1

[dependencies]
gl = "0.14.0"
glam = "0.29.2"
glutin = "0.32.1"
glutin-winit = "0.5.0"
raw-window-handle = "0.6"
winit = {version = "0.30.0",default-features = false,features = ["rwh_06"]}
image = {version = "0.25.2",default-features = false,features = ["default-formats"]}
pretty_env_logger = "0.5.0"
specs = {version = "0.20.0",default-features = false}

graphics = {path = "crates/graphics"}
assets ={ path = "crates/assets"}
time = {path = "crates/time"}
transform = {path = "crates/transform"}

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30.0", default-features = false, features = ["android-native-activity", "rwh_06"] }

[build-dependencies]
assets ={ path = "crates/assets"}

