[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
gl = {path = "../gl"}
math = {path = "../math"}
bitflags = "2.6.0"
image = "0.25.2"
pretty_env_logger = "0.5.0"
log = "0.4.22"
specs = {path = "../specs",default-features = false}
transform = {path = "../transform"}
anymap = {path = "../anymap"}
atomic_refcell = "*"